[gd_scene load_steps=5 format=3 uid="uid://tfbfx5v4sf2t"]

[ext_resource type="Script" uid="uid://cs0xeqd1qmdwh" path="res://Map/InventoryFolder/Scripts/InventoryUI_Slot.gd" id="1_5fbgq"]
[ext_resource type="Texture2D" uid="uid://c1xy5vh4d2ejx" path="res://Map/InventoryFolder/InventoryArt/inventorySlot.png" id="1_bnftv"]
[ext_resource type="Texture2D" uid="uid://cmyossxb4jcjb" path="res://Map/Art/woolTemp.png" id="3_cqx3a"]
[ext_resource type="Texture2D" uid="uid://why87ocur8y5" path="res://Map/InventoryFolder/InventoryArt/deleteItem.png" id="4_y4csm"]

[node name="InventoryUISlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(8, 8)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5fbgq")

[node name="UI_Slot" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_bnftv")

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
offset_left = 29.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 11.0
icon = ExtResource("4_y4csm")
flat = true

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]
texture = ExtResource("3_cqx3a")

[connection signal="pressed" from="DeleteButton" to="." method="hideItem"]
